// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Group > toSVG with a clipPath 1`] = `
"<g transform="matrix(1 0 0 1 90 130)" clip-path="url(#SVGID)"  >
<clipPath id="SVGID" >
	<rect transform="matrix(1 0 0 1 0 0)" x="-50" y="-50" rx="0" ry="0" width="100" height="100" />
</clipPath>
<g style=""   >
		<g transform="matrix(1 0 0 1 25 -25)"  >
<rect style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"  x="-15" y="-5" rx="0" ry="0" width="30" height="10" />
</g>
		<g transform="matrix(1 0 0 1 -35 10)"  >
<rect style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"  x="-5" y="-20" rx="0" ry="0" width="10" height="40" />
</g>
</g>
</g>
"
`;

exports[`Group > toSVG with a clipPath absolutePositioned 1`] = `
"<g clip-path="url(#SVGID)"  >
<g transform="matrix(1 0 0 1 90 130)"  >
<clipPath id="SVGID" >
	<rect transform="matrix(1 0 0 1 0 0)" x="-50" y="-50" rx="0" ry="0" width="100" height="100" />
</clipPath>
<g style=""   >
		<g transform="matrix(1 0 0 1 25 -25)"  >
<rect style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"  x="-15" y="-5" rx="0" ry="0" width="30" height="10" />
</g>
		<g transform="matrix(1 0 0 1 -35 10)"  >
<rect style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;"  x="-5" y="-20" rx="0" ry="0" width="10" height="40" />
</g>
</g>
</g>
</g>
"
`;
